# solution

./: CMakeLists.txt  CommUtilities.cpp  CommUtilities.h  DefaultFileReader.cpp  DefaultTest.cpp  MDEntry.cpp  MDEntry.h  Readme.md  SmartBuffer.hpp  SmartFileReader.cpp  SmartTest.cpp  Solution.cpp  Solution.h  WC.cpp  in.txt  main.cpp
UnitTests/: CMakeLists.txt  MergeUnequalSizedFiles.cpp  MergingEmptyFiles.cpp  MergingFilesOneEmptyAndOtherNonEmpty.cpp  NegativeCaseTests.cpp  PositiveCaseTests.cpp  SortAlphabeticallyIfTimestampEqual.cpp  SortByTimestamp.cpp
